# media-search

./: .cursorrules  .env.example  .envrc  .gitignore  .update_library.sh.swp  COMMIT_MSG_DRAFT.txt  COMMIT_MSG_FEATURE_MLX.txt  README.md  _clip_mlx.py  alembic.ini  app.py  build_library.sh  dashboard.sh  database.py  docker-compose.dev.yml  docker-compose.yml  ingest.py  media_database.py  mediasearch.db-shm  mediasearch.db-wal  mediasearch.py  package-lock.json  package.json  pg.sh  pyproject.toml  run.sh  tagging.py  tailwind.config.js  test.sh  test_migration.sh  update_library.sh
docs/: CODE_REVIEW_REPORT.md
docs/specs/: api_user_guide.md  cli_user_guide.md  deployment_user_guide.md  prd.md  quickwit_staged_plan.md  requirements.md  system_architecture.md  ui_user_guide.md  video_extraction_user_guide.md
migrations/: README  env.py
migrations/versions/: 001_initial_models_aimodel_library_asset_videoframe_workerstatus.py  002_asset_library_rel_path_unique.py  003_system_metadata.py  004_rename_workerstatus_to_worker_status.py  005_scan_status_full_fast_requested.py  006_add_library_absolute_path_and_deleted_at.py  007_timestamps_with_timezone.py  008_asset_proxied_processing_error_message.py  009_aimodel_name_version_asset_analysis.py  010_asset_fts_gin_index.py  011_video_scenes_and_active_state.py  012_seed_default_ai_model_moondream2.py  013_video_scenes_fts_gin_index.py  014_asset_preview_path.py  015_asset_video_preview_path.py  016_asset_size_bigint.py  017_project_and_project_assets.py  018_seed_ai_model_moondream3.py  019_seed_ai_model_moondream_station.py  020_add_assetstatus_analyzed_light.py  021_asset_segmentation_version.py  022_worker_status_hostname.py  023_library_model_policy.py  024_asset_metadata.py  025_metadata_status_check_constraint.py
quickwit/: media_scenes_schema.json
src/: cli.py
src/ai/: __init__.py  factory.py  schema.py  vision_base.py  vision_moondream.py  vision_moondream3.py  vision_moondream_station.py
src/api/: __init__.py  main.py
src/core/: __init__.py  config.py  file_extensions.py  flight_log.py  io_utils.py  logging.py  maintenance.py  path_resolver.py  storage.py
src/metadata/: exif_adapter.py  face_detection.py  normalization.py  sharpness.py
src/models/: __init__.py  entities.py  (+1 more)
static_src/: app.css
tests/: __init__.py  conftest.py  test_admin_search_api.py  test_ai_repair.py  test_ai_start_moondream_cli.py  test_ai_worker.py  test_ai_worker_transient_errors.py  test_api_data_dir_validation.py  test_app.py  test_app_thread_safety.py  test_asset_detail_api.py  test_asset_list.py  test_asset_show.py  test_base_worker.py  test_cli_reindex.py  test_clip_api.py  test_clip_extractor.py  test_clip_mlx.py  test_core_logic.py  test_default_ai_model.py  test_face_detection.py  test_high_res_extractor.py  test_image_proxy_pipeline.py  test_io_utils.py  test_library_api.py  test_library_model_policy_repo.py  test_library_repo.py  test_maintenance.py  test_mediasearch.py  test_metadata_normalization.py  test_metadata_worker.py  test_migrations.py  test_models.py  test_project_api.py  test_project_export_api.py  test_project_repo.py  test_proxy_pipeline.py  test_proxy_repair.py  test_quickwit_search_repo.py  test_sanity.py  (+27 more)
(+31 files in other folders)
