[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "media-search"
version = "0.1.0"
description = "Media search service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlmodel>=0.0.14",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "PyYAML>=6.0",
    "pydantic-settings>=2.0",
    "pytest>=9.0.2",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "jinja2>=3.1",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.0",
    "pillow>=10.0",
    "torch",
    "einops",
    "transformers>=4.45.0,<5.0.0",
    "pyvips>=3.1.1",
    "accelerate>=1.12.0",
    "imagehash>=4.3.0",
    "opencv-python-headless>=4.8.0",
    "rapidfuzz>=3.0.0",
    "rawpy>=0.26.1",
    "requests>=2.25",
    "moondream-station>=0.1.9",
]

[project.scripts]
media-search = "src.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-order>=1.0",
    "testcontainers[postgres]>=4.0",
]
station = [
    "moondream>=0.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "migration: run Alembic migration tests (use: pytest -m migration)",
    "fast: no DB, no AI; unit tests, mocks, tmp_path only",
    "slow: need DB (testcontainers Postgres)",
    "ai: need real AI (e.g. moondream)",
]
addopts = ["-m", "not migration and (fast or slow)"]
filterwarnings = [
    "ignore:.*torch\\.jit\\.script_method.*Python 3\\.14.*:DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
